# NoteKeep

./: .env.example  .gitignore  Dockerfile  IMAGE_UPLOAD_FEATURE.md  MIGRATIONS.md  MIGRATION_COMPLETE.md  MIGRATION_GUIDE.md  README.md  SECURITY.md  TELEGRAM_POLLING.md  add_image_checking_migration.py  add_link_health_migration.py  add_note_image_column.py  add_tag_icons_migration.py  alembic.ini  check_link_images.py  cron_check_images.sh  docker-compose.yml  init_alembic.py  migrate.py  migrate_db.py  migration_add_notes.sql  pyproject.toml  remove_in_inbox_migration.py  remove_is_done_migration.py  remove_saved_searches_migration.py  requirements.txt  sample_import.csv
app/: config.py  crud.py  database.py  icons.py  image_utils.py  link_preview.py  main.py  models.py  run_telegram_poller.py  schemas.py  tasks.py  telegram_poller.py
app/routers/: __init__.py  api.py  web.py
app/static/: manifest.webmanifest
app/static/css/: main.css
app/static/js/: add.js  sw.js
app/templates/: add.html  base.html  inbox.html  link_detail.html  links.html  note_detail.html  settings.html
migrations/: env.py
scripts/: reset_database.py
tests/: test_api.py  test_tasks.py  test_url_normalization.py
