[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notekeep"
version = "0.1.0"
description = "Self-hosted link inbox and organizer"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.30",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1.4",
    "python-slugify>=8.0.4",
    "aiofiles>=23.2.1",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.1",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.23.7"
]

dev = [
    "ruff>=0.5.4"
]

[tool.setuptools]
packages = { find = { where = ["."], include = ["app*", "tests*"], exclude = ["*.tests", "tests.*"] } }

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "B", "UP"]
ignore = []
